feat(single_frame): init single frame branch

--- a/notebooks/inspect_dataset.ipynb
+++ b/notebooks/inspect_dataset.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -22,7 +27,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "# ds_name = 'ycbv.train.real'\n",
@@ -33,7 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "from cosypose.visualization.plotter import Plotter\n",
@@ -47,14 +56,32 @@
     "    figures.append(f)\n",
     "plot = gridplot(figures, ncols=3, sizing_mode='scale_width')\n",
     "show(plot)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "robotics",
+   "name": "python3",
    "language": "python",
-   "name": "robotics"
+   "display_name": "Python 3"
   },
   "language_info": {
    "codemirror_mode": {
