--- a/notebooks/visualize_singleview_predictions.ipynb
+++ b/notebooks/visualize_singleview_predictions.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -23,7 +28,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "# result_id = 'tless-siso-n_views=1--684390594'\n",
@@ -43,7 +53,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "results[pred_key].infos.loc[:, ['scene_id', 'view_id']].groupby('scene_id').first()"
@@ -52,7 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# scene_id, view_id = 12, 103\n",
@@ -68,7 +82,25 @@
     "\n",
     "show(figures['input_im'])\n",
     "show(figures['pred_overlay'])"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
